[project]
name = "ziba_imputer"
dynamic = ["version"]
license = { file = "LICENSE" }
description = "A python package for performing various imputation strategies."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "polars>=1.35.2",
    "scipy",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ziba*"]

[tool.setuptools_scm]
write_to = "src/ziba/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src/ziba"]
exclude = ["tests"]
venv = ".ziba"
pythonVersion = "3.12"
defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonPlatform = "Linux"

[tool.uv.workspace]
members = [
    "ziba",
    "test",
]

[dependency-groups]
torch = [
    "torch>=2.0.0",
    "torchvision",
]
jax = [
    "jax>=0.8.0",
    "flax>=0.12.0",
]
jax-cuda12 = [
    "jax[cuda12]",
]
all_ml = [
    {include-group = "torch"},
    {include-group = "jax"},
]
test = [
    "pytest>=8.3.5",       # for testing
    "pytest-cov>=6.0.0",   # for coverage
    "pytest-xdist>=3.6.1", # for parallel testing
    "packaging",           # for version parsing
]
lint = [
    "ruff>=0.14.1",       # for linting
    "pre-commit>=4.3.0",  # for running the linters pre-commit hooks
    "pyright"
]
dev = [
    {include-group = "all_ml"},
    {include-group = "test"},
    {include-group = "lint"},
]
